--- a/app/src/main/res/layout/snippet_listview.xml
+++ b/app/src/main/res/layout/snippet_listview.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorYellow">
+    android:background="@drawable/background_boarder_listview">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
